--- a/index.html
+++ b/index.html
@@ -1,12 +1,110 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <title>HTML Academy: Техномарт</title>
-  </head>
-  <body>
 
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS, уровень 1</a>».</p>
+<head>
+  <meta charset="utf-8">
+  <title>HTML Academy: Техномарт</title>
+</head>
 
-  </body>
+<body>
+  <header>
+    <a>
+      <img src="img/logo-header.svg" width="220" height="47" alt="Логотип магазина техномарт">
+    </a>
+    <p>
+      Поиск:
+      <input type="text"/>
+    </p>
+    <p>Закладки: <span>0</span></p>
+    <p>Корзина: <span>0</span></p>
+    <a href="#">Оформить заказ</a>
+    <p>Интернет-магазин строительных материалов и инструментов для ремонта</p>>
+    <p>
+      <span>+7 (812) 555-05-55</span>
+      <span>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</span>
+    </p>
+    <ul>
+      <li>
+        <a href="">Войти</a></button>
+      </li>
+      <li>
+          <a href="">Регистрация</a></button>
+      </li>
+    </ul>
+    <nav>
+      <ul>
+        <li><a>Главная</a></li>
+        <li><a href="">Компания</a></li>
+        <li><a href="catalog.html">Каталог</a></li>
+        <li><a href="">Новости</a></li>
+        <li><a href="">Спецпредложения</a></li>
+        <li><a href="">Доставка</a></li>
+        <li><a href="">Контакты</a></li>
+      </ul>
+    </nav>
+
+  </header>
+  <main>
+    <h1>Интернет-магазин строительных материалов и инструментов для ремонта</h1>
+    <section>
+      <h2>О компании</h2>
+      <p>Компания "Техномарт"</p>
+      <p>Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и строительства не оставит равнодушными любителей сэкономить на гастарбайтерах.</p>
+      <p>Мы можем доставить ваш товар в самые отдаленные точки России! Техномарт работает со многими транспортными компаниями: </p>
+      <ul>
+        <li>Деловые линии</li>
+        <li>Автотрейдинг</li>          
+        <li>ЖелДорЭкспедиция</li>
+      </ul>
+      <a href="">Подробнее о компании</a>
+    </section>
+    <section>
+      <h2>Контакты</h2>
+      <p>Вы можете забрать товар сами,<br> заехав к нам в офис.</p>
+      <a href=""><img src="map.jpg" width="300" height="159" alt="Местоположение магазина"></a>
+      <button type="button">Заблудились? Напишите нам!</button>
+    </section>
+  </main>
+  <footer>
+    <a>
+      <img src="img/logo-footer.svg" width="220" height="67" alt="Логотип магазина техномарт">
+    </a>
+    <p>
+      Адрес: г. Санкт-Петербург, Б. Конюшенная, д. 19/8<br>
+      +7 (812) 555-05-55
+    </p>
+    <ul>
+        <li><a href="">Компания</a></li>
+        <li><a href="">Новости</a></li>
+        <li><a href="">Каталог</a></li>
+        <li><a href="">Доставка</a></li>
+        <li><a href="">Контакты</a></li>
+        <li><a href="">Материалы</a></li>
+        <li><a href="">Техника</a></li>
+        <li><a href="">Инструмент</a></li>
+        <li><a href="">Спецпредложения</a></li>
+      </ul>
+      <p>&copy; 2010-2019 Компания "Техномарт"<br>Все права защищены</p>
+      <ul>
+          <li><a href="#">ВКонтакте</a></li>
+          <li><a href="#">Фейсбук</a></li>
+          <li><a href="#">Инстаграм</a></li>
+      </ul>
+      <p>
+        Обратная связь:
+        <a href="mailto:mail@htmlacademy.ru">mail.htmlacademy.ru</a>
+      </p>
+      <p>
+        Разработано:
+        <a href="https://htmlacademy.ru/intensive/htmlcss">HTML Academy</a>
+      </p>
+  </footer>
+
+  <section>
+      <h2>Обратная связь</h2>
+      <!--Здесь булет форма-->
+      <button type="button">Закрыть</button>
+  </section>
+</body>
+
 </html>
