Выполнена разметка по 2-ой лекции Дополнено

--- a/catalog.html
+++ b/catalog.html
@@ -62,8 +62,13 @@
             <li class="breadcrumbs-current">Перфораторы</li>
         </ul>
         <section>
-            <h2>Фильтры</h2>
+            <h2>Фильтр:</h2>
             <form action="catalog.html">
+                <span>Цена:</span>
+                <div>
+                    <input id="price-from" type="text" />
+                    <input id="price-till" type="text" />
+                </div>
                 <span>Производители:</span>
                 <ul>
                     <li><label><input type="checkbox">Bosch</label></li>
@@ -80,6 +85,17 @@
                 <button type="submit">Показать</button>
             </form>
             <!--Здесь будет форма-->
+        </section>
+        <section>
+            <h2>Сортировка:</h2>
+            <ul>
+                <li><a href="">По цене</a></li>
+                <li><a href="">По типу</a></li>
+                <li><a href="">По функционалу</a></li>
+                <li><a href=""><span>По возрастанию</span></a></li>
+                <li><a href=""><span>По убыванию</span></a></li>
+            </ul>
+
         </section>
         <section>
             <h2>Список перфораторов</h2>
@@ -292,6 +308,17 @@
                     </div>
                 </li>
             </ul>
+            <ul>
+                <li><a>1</a></li>
+                <li><a href="#">2</a></li>
+                <li><a href="#">3</a></li>
+                <li><a href="#">Следующая</a></li>
+            </ul>
+        </section>
+        <section>
+            <h2>О перфораторах</h2>
+            <p>Пара слов о перфораторах</p>
+            <p>Перфоратор - универсальный строительный инструмент. Предназначен для сверления отверстий в кирпиче, бетоне и камне.<br>Существует электромеханические и пневматические перфораторы. Современные модели могут выполнять функции дрели, шуруповерта и отбойного молотка. В<br>ассортиментном ряду есть выбор "трехрежимников": в одном устройстве будут совмещены отбойный молоток и ударная дрель.</p>
         </section>
     </main>
     <footer>
