--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </a>
     <p>
       Поиск:
-      <input type="text"/>
+      <input type="text" />
     </p>
     <p>Закладки: <span>0</span></p>
     <p>Корзина: <span>0</span></p>
@@ -28,7 +28,7 @@
         <a href="">Войти</a></button>
       </li>
       <li>
-          <a href="">Регистрация</a></button>
+        <a href="">Регистрация</a></button>
       </li>
     </ul>
     <nav>
@@ -47,13 +47,215 @@
   <main>
     <h1>Интернет-магазин строительных материалов и инструментов для ремонта</h1>
     <section>
+      <h2>Список групп товаров и услуг</h2>
+      <ul>
+        <li>
+          <a href="">
+            <p>Материалы</p>
+            <span>На любой вкус</span>
+          </a>
+        </li>
+        <li>
+          <a href="">
+            <p>Инструмент</p>
+            <span>На все случаи</span>
+          </a>
+        </li>
+        <li>
+          <a href="">
+            <p>Техника</p>
+            <span>Для стройки</span>
+          </a>
+        </li>
+        <li>
+          <a href="">
+            Скидка 50%
+            <span>На 350 товаров</span>
+          </a>
+        </li>
+        <li>
+          <a href="">
+            Доставка
+            <span>Бесплатно</span>
+          </a>
+        </li>
+      </ul>
+    </section>
+    <section>
+      <h2>Слайдер каталога</h2>
+      <ul>
+        <li>
+          <a href="">
+            <span>Перфораторы</span>
+            <span>Настоящие мужские игрушки</span>
+          </a>
+          <img src="img/perforator.jpg" width="621" height="267" alt="Перфораторы">
+          <a href="">Открыть каталог</a>
+        </li>
+        <li>
+          <a href="">
+            <span>Дрели</span>
+            <span>Соседям на радость</span>
+          </a>
+          <img src="img/dreli.jpg" width="621" height="267" alt="Перфораторы">
+          <a href="">Открыть каталог</a>
+        </li>
+      </ul>
+      <button type="button">Предыдущий</button>
+      <button type="button">Следующий</button>
+    </section>
+    <section>
+      <h2>Популярные товары:</h2>
+      <a href="#">Все популярные товары</a>
+      <ul>
+        <li>
+          <h3>
+            <button type="button">
+              <span>Перфоратор</span>
+              <span>BOSCH BFG 9000</span>
+            </button>
+          </h3>
+          <p>
+            <button type="button">
+              <img src="#" alt="Перфоратор BOSCH BFG 9000" width="203" height="167" />
+            </button>
+            <button type="button">
+              <span>32500 Р.</span>
+              <span>25500 Р.</span>
+            </button>
+          </p>
+          <div>
+            <ul>
+              <li><button type="button">Купить</button></li>
+              <li><button type="button">В закладки</button></li>
+            </ul>
+          </div>
+        </li>
+        <li>
+          <h3>
+            <button type="button">
+              <span>Перфоратор</span>
+              <span>BOSCH BFG 3000</span>
+            </button>
+          </h3>
+          <p>
+            <button type="button">
+              <img src="#" alt="Перфоратор BOSCH BFG 3000" width="203" height="167" />
+            </button>
+            <button type="button">
+              <span>22500 Р.</span>
+              <span>15500 Р.</span>
+            </button>
+          </p>
+          <div>
+            <ul>
+              <li><button type="button">Купить</button></li>
+              <li><button type="button">В закладки</button></li>
+            </ul>
+          </div>
+        </li>
+        <li>
+          <h3>
+            <button type="button">
+              <span>Перфоратор</span>
+              <span>BOSCH BFG 6000</span>
+            </button>
+          </h3>
+          <p>
+            <button type="button">
+              <img src="#" alt="Перфоратор BOSCH BFG 6000" width="203" height="167" />
+            </button>
+            <button type="button">
+              <span>30500 Р.</span>
+              <span>25500 Р.</span>
+            </button>
+          </p>
+          <div>
+            <ul>
+              <li><button type="button">Купить</button></li>
+              <li><button type="button">В закладки</button></li>
+            </ul>
+          </div>
+        </li>
+        <li>
+          <h3>
+            <button type="button">
+              <span>Перфоратор</span>
+              <span>BOSCH BFG 2000</span>
+            </button>
+          </h3>
+          <p>
+            <button type="button">
+              <img src="#" alt="Перфоратор BOSCH BFG 2000" width="203" height="167" />
+            </button>
+            <button type="button">
+              <span></span>
+              <span>12500 Р.</span>
+            </button>
+          </p>
+          <div>
+            <ul>
+              <li><button type="button">Купить</button></li>
+              <li><button type="button">В закладки</button></li>
+            </ul>
+          </div>
+        </li>
+      </ul>
+    </section>
+    <section>
+      <h2>Популярные производители:</h2>
+      <a href="#">Все производители</a>
+      <ul>
+        <li><a href=""><img src="img/bosch.jpg" width="220" height="130" alt="Bosch"></a></li>
+        <li><a href=""><img src="img/makita.jpg" width="220" height="130" alt="Makita"></a></li>
+        <li><a href=""><img src="img/dewalt.jpg" width="220" height="130" alt="Dewalt"></a></li>
+        <li><a href=""><img src="img/interskol.jpg" width="220" height="130" alt="Interskol"></a></li>
+        <li><a href=""><img src="img/hitachi.jpg" width="220" height="130" alt="Hitachi"></a></li>
+        <li><a href=""><img src="img/lg.jpg" width="220" height="130" alt="Lg"></a></li>
+        <li><a href=""><img src="img/aeg.jpg" width="220" height="130" alt="Aeg"></a></li>
+        <li><a href=""><img src="img/metabo.jpg" width="220" height="130" alt="Metabo"></a></li>
+      </ul>
+    </section>
+    <section>
+      <h2>Сервисы</h2>
+      <p>Хороший Интернет-магазин отличется от плохого не только ценами!<br>Мы стараемся изо всех сил, чтобы сделать
+        ваши покупки приятными.</p>
+      <ul>
+        <li>
+          <h3>Доставка</h3>
+          <div>
+            <span>Доставка</span>
+            <p>Мы с удовольствием доставим ваш товар прямо<br>к вашему подъезду совершенно бесплатно!<br>Ведь мы неплохо
+              заработаем, поднимая его на ваш этаж!</p>
+          </div>
+        </li>
+        <li>
+          <h3>Гарантия</h3>
+          <div>
+            <span>Гарантия</span>
+            <p>Если купленный у нас товар поломается или заискрит,<br>а также в случае пожара, спровоцированный его возгоранием,<br>вы всегда можете быть уверены в нашей гарантии. Мы обменяем<br>сгоревший товар на новый.<br>Дом уж восстановите как-нибудь сами.</p>
+          </div>
+        </li>
+        <li>
+          <h3>Кредит</h3>
+          <div>
+            <span>Кредит</span>
+            <p>Залезть в долговую яму стало проще!<br>Кредитные консультанты придут вам на помощь.</p>
+            <a href="">Отправить заявку</a>
+          </div>
+        </li>
+      </ul>
+    </section>
+    <section>
       <h2>О компании</h2>
       <p>Компания "Техномарт"</p>
-      <p>Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и строительства не оставит равнодушными любителей сэкономить на гастарбайтерах.</p>
-      <p>Мы можем доставить ваш товар в самые отдаленные точки России! Техномарт работает со многими транспортными компаниями: </p>
+      <p>Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и строительства не оставит
+        равнодушными любителей сэкономить на гастарбайтерах.</p>
+      <p>Мы можем доставить ваш товар в самые отдаленные точки России! Техномарт работает со многими транспортными
+        компаниями: </p>
       <ul>
         <li>Деловые линии</li>
-        <li>Автотрейдинг</li>          
+        <li>Автотрейдинг</li>
         <li>ЖелДорЭкспедиция</li>
       </ul>
       <a href="">Подробнее о компании</a>
@@ -74,36 +276,36 @@
       +7 (812) 555-05-55
     </p>
     <ul>
-        <li><a href="">Компания</a></li>
-        <li><a href="">Новости</a></li>
-        <li><a href="">Каталог</a></li>
-        <li><a href="">Доставка</a></li>
-        <li><a href="">Контакты</a></li>
-        <li><a href="">Материалы</a></li>
-        <li><a href="">Техника</a></li>
-        <li><a href="">Инструмент</a></li>
-        <li><a href="">Спецпредложения</a></li>
-      </ul>
-      <p>&copy; 2010-2019 Компания "Техномарт"<br>Все права защищены</p>
-      <ul>
-          <li><a href="#">ВКонтакте</a></li>
-          <li><a href="#">Фейсбук</a></li>
-          <li><a href="#">Инстаграм</a></li>
-      </ul>
-      <p>
-        Обратная связь:
-        <a href="mailto:mail@htmlacademy.ru">mail.htmlacademy.ru</a>
-      </p>
-      <p>
-        Разработано:
-        <a href="https://htmlacademy.ru/intensive/htmlcss">HTML Academy</a>
-      </p>
+      <li><a href="">Компания</a></li>
+      <li><a href="">Новости</a></li>
+      <li><a href="">Каталог</a></li>
+      <li><a href="">Доставка</a></li>
+      <li><a href="">Контакты</a></li>
+      <li><a href="">Материалы</a></li>
+      <li><a href="">Техника</a></li>
+      <li><a href="">Инструмент</a></li>
+      <li><a href="">Спецпредложения</a></li>
+    </ul>
+    <p>&copy; 2010-2019 Компания "Техномарт"<br>Все права защищены</p>
+    <ul>
+      <li><a href="#">ВКонтакте</a></li>
+      <li><a href="#">Фейсбук</a></li>
+      <li><a href="#">Инстаграм</a></li>
+    </ul>
+    <p>
+      Обратная связь:
+      <a href="mailto:mail@htmlacademy.ru">mail.htmlacademy.ru</a>
+    </p>
+    <p>
+      Разработано:
+      <a href="https://htmlacademy.ru/intensive/htmlcss">HTML Academy</a>
+    </p>
   </footer>
 
   <section>
-      <h2>Обратная связь</h2>
-      <!--Здесь булет форма-->
-      <button type="button">Закрыть</button>
+    <h2>Обратная связь</h2>
+    <!--Здесь булет форма-->
+    <button type="button">Закрыть</button>
   </section>
 </body>
 
