--- a/catalog.html
+++ b/catalog.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <a>
-            <img src="img/logo-header.svg" width="220" height="47" alt="Логотип магазина техномарт">
+            <img src="img/logo.png" width="115" height="25" alt="Логотип магазина техномарт">
         </a>
         <p>
             Поиск:
@@ -109,7 +109,7 @@
                     </h3>
                     <p>
                         <button type="button">
-                            <img src="#" alt="Перфоратор BOSCH BFG 3000" width="203" height="167" />
+                            <img src="img/perforator-1.jpg" alt="Перфоратор BOSCH BFG 3000" width="218" height="170" />
                         </button>
                         <button type="button">
                             <span>22500 Р.</span>
@@ -132,7 +132,7 @@
                     </h3>
                     <p>
                         <button type="button">
-                            <img src="#" alt="Перфоратор BOSCH BFG 6000" width="203" height="167" />
+                            <img src="img/perforator-2.jpg" alt="Перфоратор BOSCH BFG 6000" width="218" height="170" />
                         </button>
                         <button type="button">
                             <span>30500 Р.</span>
@@ -155,7 +155,7 @@
                     </h3>
                     <p>
                         <button type="button">
-                            <img src="#" alt="Перфоратор BOSCH BFG 2000" width="203" height="167" />
+                            <img src="img/perforator-3.jpg" alt="Перфоратор BOSCH BFG 2000" width="218" height="170" />
                         </button>
                         <button type="button">
                             <span></span>
@@ -178,7 +178,7 @@
                     </h3>
                     <p>
                         <button type="button">
-                            <img src="#" alt="Перфоратор BOSCH BFG 3000" width="203" height="167" />
+                            <img src="img/perforator-1.jpg" alt="Перфоратор BOSCH BFG 3000" width="218" height="170" />
                         </button>
                         <button type="button">
                             <span>22500 Р.</span>
@@ -201,7 +201,7 @@
                     </h3>
                     <p>
                         <button type="button">
-                            <img src="#" alt="Перфоратор BOSCH BFG 6000" width="203" height="167" />
+                            <img src="img/perforator-2.jpg" alt="Перфоратор BOSCH BFG 6000" width="218" height="170" />
                         </button>
                         <button type="button">
                             <span>30500 Р.</span>
@@ -224,7 +224,7 @@
                     </h3>
                     <p>
                         <button type="button">
-                            <img src="#" alt="Перфоратор BOSCH BFG 2000" width="203" height="167" />
+                            <img src="img/perforator-3.jpg" alt="Перфоратор BOSCH BFG 2000" width="218" height="170" />
                         </button>
                         <button type="button">
                             <span></span>
@@ -247,7 +247,7 @@
                     </h3>
                     <p>
                         <button type="button">
-                            <img src="#" alt="Перфоратор BOSCH BFG 3000" width="203" height="167" />
+                            <img src="img/perforator-1.jpg" alt="Перфоратор BOSCH BFG 3000" width="218" height="170" />
                         </button>
                         <button type="button">
                             <span>22500 Р.</span>
@@ -270,7 +270,7 @@
                     </h3>
                     <p>
                         <button type="button">
-                            <img src="#" alt="Перфоратор BOSCH BFG 6000" width="203" height="167" />
+                            <img src="img/perforator-2.jpg" alt="Перфоратор BOSCH BFG 6000" width="218" height="170" />
                         </button>
                         <button type="button">
                             <span>30500 Р.</span>
@@ -293,7 +293,7 @@
                     </h3>
                     <p>
                         <button type="button">
-                            <img src="#" alt="Перфоратор BOSCH BFG 2000" width="203" height="167" />
+                            <img src="img/perforator-3.jpg" alt="Перфоратор BOSCH BFG 2000" width="218" height="170" />
                         </button>
                         <button type="button">
                             <span></span>
@@ -323,7 +323,7 @@
     </main>
     <footer>
         <a>
-            <img src="img/logo-footer.svg" width="220" height="67" alt="Логотип магазина техномарт">
+            <img src="img/logo-footer.png" width="145" height="30" alt="Логотип магазина техномарт">
         </a>
         <p>
             Адрес: г. Санкт-Петербург, Б. Конюшенная, д. 19/8<br>
