--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <header>
     <a>
-      <img src="img/logo-header.svg" width="220" height="47" alt="Логотип магазина техномарт">
+      <img src="img/logo.png" width="115" height="25" alt="Логотип магазина техномарт">
     </a>
     <p>
       Поиск:
@@ -89,7 +89,7 @@
             <span>Перфораторы</span>
             <span>Настоящие мужские игрушки</span>
           </a>
-          <img src="img/perforator.jpg" width="621" height="267" alt="Перфораторы">
+          <img src="img/perforatori.jpg" width="620" height="266" alt="Перфораторы">
           <a href="">Открыть каталог</a>
         </li>
         <li>
@@ -97,7 +97,7 @@
             <span>Дрели</span>
             <span>Соседям на радость</span>
           </a>
-          <img src="img/dreli.jpg" width="621" height="267" alt="Перфораторы">
+          <img src="img/dreli.jpg" width="620" height="266" alt="Перфораторы">
           <a href="">Открыть каталог</a>
         </li>
       </ul>
@@ -117,7 +117,7 @@
           </h3>
           <p>
             <button type="button">
-              <img src="#" alt="Перфоратор BOSCH BFG 9000" width="203" height="167" />
+              <img src="img/perforator-1.jpg" alt="Перфоратор BOSCH BFG 9000" width="218" height="170" />
             </button>
             <button type="button">
               <span>32500 Р.</span>
@@ -140,7 +140,7 @@
           </h3>
           <p>
             <button type="button">
-              <img src="#" alt="Перфоратор BOSCH BFG 3000" width="203" height="167" />
+              <img src="img/perforator-2.jpg" alt="Перфоратор BOSCH BFG 3000" width="218" height="170" />
             </button>
             <button type="button">
               <span>22500 Р.</span>
@@ -163,7 +163,7 @@
           </h3>
           <p>
             <button type="button">
-              <img src="#" alt="Перфоратор BOSCH BFG 6000" width="203" height="167" />
+              <img src="img/perforator-3.jpg" alt="Перфоратор BOSCH BFG 6000" width="218" height="170" />
             </button>
             <button type="button">
               <span>30500 Р.</span>
@@ -186,7 +186,7 @@
           </h3>
           <p>
             <button type="button">
-              <img src="#" alt="Перфоратор BOSCH BFG 2000" width="203" height="167" />
+              <img src="img/perforator-4.jpg" alt="Перфоратор BOSCH BFG 2000" width="218" height="170" />
             </button>
             <button type="button">
               <span></span>
@@ -206,14 +206,14 @@
       <h2>Популярные производители:</h2>
       <a href="#">Все производители</a>
       <ul>
-        <li><a href=""><img src="img/bosch.jpg" width="220" height="130" alt="Bosch"></a></li>
-        <li><a href=""><img src="img/makita.jpg" width="220" height="130" alt="Makita"></a></li>
-        <li><a href=""><img src="img/dewalt.jpg" width="220" height="130" alt="Dewalt"></a></li>
-        <li><a href=""><img src="img/interskol.jpg" width="220" height="130" alt="Interskol"></a></li>
-        <li><a href=""><img src="img/hitachi.jpg" width="220" height="130" alt="Hitachi"></a></li>
-        <li><a href=""><img src="img/lg.jpg" width="220" height="130" alt="Lg"></a></li>
-        <li><a href=""><img src="img/aeg.jpg" width="220" height="130" alt="Aeg"></a></li>
-        <li><a href=""><img src="img/metabo.jpg" width="220" height="130" alt="Metabo"></a></li>
+        <li><a href=""><img src="img/bosch.jpg" width="126" height="37" alt="Bosch"></a></li>
+        <li><a href=""><img src="img/makita.jpg" width="123" height="40" alt="Makita"></a></li>
+        <li><a href=""><img src="img/dewalt.jpg" width="146" height="44" alt="Dewalt"></a></li>
+        <li><a href=""><img src="img/interskol.jpg" width="200" height="88" alt="Interskol"></a></li>
+        <li><a href=""><img src="img/hitachi.jpg" width="169" height="31" alt="Hitachi"></a></li>
+        <li><a href=""><img src="img/lg.jpg" width="121" height="73" alt="Lg"></a></li>
+        <li><a href=""><img src="img/aeg.jpg" width="151" height="96" alt="Aeg"></a></li>
+        <li><a href=""><img src="img/metabo.jpg" width="204" height="69" alt="Metabo"></a></li>
       </ul>
     </section>
     <section>
@@ -263,13 +263,13 @@
     <section>
       <h2>Контакты</h2>
       <p>Вы можете забрать товар сами,<br> заехав к нам в офис.</p>
-      <a href=""><img src="map.jpg" width="300" height="159" alt="Местоположение магазина"></a>
+      <a href=""><img src="img/map.png" width="300" height="159" alt="Местоположение магазина"></a>
       <button type="button">Заблудились? Напишите нам!</button>
     </section>
   </main>
   <footer>
     <a>
-      <img src="img/logo-footer.svg" width="220" height="67" alt="Логотип магазина техномарт">
+      <img src="img/logo-footer.png" width="145" height="30" alt="Логотип магазина техномарт">
     </a>
     <p>
       Адрес: г. Санкт-Петербург, Б. Конюшенная, д. 19/8<br>
