--- a/index.html
+++ b/index.html
@@ -17,20 +17,39 @@
     </p>
     <p>Закладки: <span>0</span></p>
     <p>Корзина: <span>0</span></p>
-    <a href="#">Оформить заказ</a>
+    <a href="">Оформить заказ</a>
     <p>Интернет-магазин строительных материалов и инструментов для ремонта</p>>
     <p>
       <span>+7 (812) 555-05-55</span>
       <span>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</span>
     </p>
-    <ul>
-      <li>
-        <a href="">Войти</a></button>
-      </li>
-      <li>
-        <a href="">Регистрация</a></button>
-      </li>
-    </ul>
+    <div class="visually-hidden">
+        <ul>
+            <li>
+                <a href="">Войти</a></button>
+            </li>
+            <li>
+                <a href="">Регистрация</a></button>
+            </li>
+        </ul>
+    </div>
+    <div class="visually-hidden">
+        <ul>
+            <li>
+                <a href="" aria-label="Профиль пользователя">
+                </a>
+            </li>
+            <li>
+                <a href="" aria-label="Выйти">Выйти</a>
+            </li>
+            <li>
+                <a href="">Мои заказы</a></button>
+            </li>
+            <li>
+                <a href="">Личный кабинет</a></button>
+            </li>
+        </ul>
+    </div>  
     <nav>
       <ul>
         <li><a>Главная</a></li>
@@ -45,86 +64,83 @@
 
   </header>
   <main>
-    <h1>Интернет-магазин строительных материалов и инструментов для ремонта</h1>
+    <h1 class="visually-hidden">Интернет-магазин строительных материалов и инструментов для ремонта</h1>
     <section>
-      <h2>Список групп товаров и услуг</h2>
+      <h2 class="visually-hidden">Список групп товаров и услуг</h2>
       <ul>
         <li>
           <a href="">
             <p>Материалы</p>
-            <span>На любой вкус</span>
+            <p>На любой вкус</p>
           </a>
         </li>
         <li>
           <a href="">
             <p>Инструмент</p>
-            <span>На все случаи</span>
+            <p>На все случаи</p>
           </a>
         </li>
         <li>
           <a href="">
             <p>Техника</p>
-            <span>Для стройки</span>
+            <p>Для стройки</p>
           </a>
         </li>
         <li>
           <a href="">
-            Скидка 50%
-            <span>На 350 товаров</span>
+              <p>Скидка 50%</p>
+            <p>На 350 товаров</p>
           </a>
         </li>
         <li>
           <a href="">
-            Доставка
-            <span>Бесплатно</span>
+            <p>Доставка</p>
+            <p>Бесплатно</p>
           </a>
         </li>
       </ul>
     </section>
     <section>
-      <h2>Слайдер каталога</h2>
+      <h2 class="visually-hidden">Слайдер каталога</h2>
       <ul>
         <li>
           <a href="">
-            <span>Перфораторы</span>
-            <span>Настоящие мужские игрушки</span>
+            <p>Перфораторы</p>
+            <p>Настоящие мужские игрушки</p>
           </a>
           <img src="img/perforatori.jpg" width="620" height="266" alt="Перфораторы">
           <a href="">Открыть каталог</a>
         </li>
         <li>
           <a href="">
-            <span>Дрели</span>
-            <span>Соседям на радость</span>
+            <p>Дрели</p>
+            <p>Соседям на радость</p>
           </a>
           <img src="img/dreli.jpg" width="620" height="266" alt="Перфораторы">
           <a href="">Открыть каталог</a>
         </li>
       </ul>
-      <button type="button">Предыдущий</button>
-      <button type="button">Следующий</button>
+      <button type="button" class="visually-hidden">Предыдущий</button>
+      <button type="button" class="visually-hidden">Следующий</button>
     </section>
     <section>
       <h2>Популярные товары:</h2>
-      <a href="#">Все популярные товары</a>
+      <a href="">Все популярные товары</a>
       <ul>
         <li>
-          <h3>
-            <button type="button">
-              <span>Перфоратор</span>
-              <span>BOSCH BFG 9000</span>
-            </button>
-          </h3>
-          <p>
-            <button type="button">
+          <button type="button">
+            <h3>
+              Перфоратор BOSCH<br>BFG 9000
+            </h3>
+            <p>
               <img src="img/perforator-1.jpg" alt="Перфоратор BOSCH BFG 9000" width="218" height="170" />
-            </button>
-            <button type="button">
-              <span>32500 Р.</span>
-              <span>25500 Р.</span>
-            </button>
-          </p>
-          <div>
+            </p>
+          </button>
+          <p>32500 Р.</p>
+          <button type="button">
+            <p>25500 Р.</p>
+          </button>
+          <div class="visually-hidden">
             <ul>
               <li><button type="button">Купить</button></li>
               <li><button type="button">В закладки</button></li>
@@ -132,22 +148,19 @@
           </div>
         </li>
         <li>
-          <h3>
-            <button type="button">
-              <span>Перфоратор</span>
-              <span>BOSCH BFG 3000</span>
-            </button>
-          </h3>
-          <p>
-            <button type="button">
+          <button type="button">
+            <h3>
+              Перфоратор<br>BOSCH BFG 3000
+            </h3>
+            <p>
               <img src="img/perforator-2.jpg" alt="Перфоратор BOSCH BFG 3000" width="218" height="170" />
-            </button>
-            <button type="button">
-              <span>22500 Р.</span>
-              <span>15500 Р.</span>
-            </button>
-          </p>
-          <div>
+            </p>
+          </button>
+          <p>22500 Р.</p>
+          <button type="button">
+            <p>15500 Р.</p>
+          </button>
+          <div class="visually-hidden">
             <ul>
               <li><button type="button">Купить</button></li>
               <li><button type="button">В закладки</button></li>
@@ -155,22 +168,19 @@
           </div>
         </li>
         <li>
-          <h3>
-            <button type="button">
-              <span>Перфоратор</span>
-              <span>BOSCH BFG 6000</span>
-            </button>
-          </h3>
-          <p>
-            <button type="button">
+          <button type="button">
+            <h3>
+              Перфоратор BOSCH<br>BFG 6000
+            </h3>
+            <p>
               <img src="img/perforator-3.jpg" alt="Перфоратор BOSCH BFG 6000" width="218" height="170" />
-            </button>
-            <button type="button">
-              <span>30500 Р.</span>
-              <span>25500 Р.</span>
-            </button>
-          </p>
-          <div>
+            </p>
+          </button>
+          <p>30500 Р.</p>
+          <button type="button">
+            <p>25500 Р.</p>
+          </button>
+          <div class="visually-hidden">
             <ul>
               <li><button type="button">Купить</button></li>
               <li><button type="button">В закладки</button></li>
@@ -178,22 +188,19 @@
           </div>
         </li>
         <li>
-          <h3>
-            <button type="button">
-              <span>Перфоратор</span>
-              <span>BOSCH BFG 2000</span>
-            </button>
-          </h3>
-          <p>
-            <button type="button">
+          <button type="button">
+            <h3>
+              Перфоратор BOSCH<br>BFG 2000
+            </h3>
+            <p>
               <img src="img/perforator-4.jpg" alt="Перфоратор BOSCH BFG 2000" width="218" height="170" />
-            </button>
-            <button type="button">
-              <span></span>
-              <span>12500 Р.</span>
-            </button>
-          </p>
-          <div>
+            </p>
+          </button>
+          <p> </p>            
+          <button type="button">
+            <p>12500 Р.</p>
+          </button>
+          <div class="visually-hidden">
             <ul>
               <li><button type="button">Купить</button></li>
               <li><button type="button">В закладки</button></li>
@@ -204,7 +211,7 @@
     </section>
     <section>
       <h2>Популярные производители:</h2>
-      <a href="#">Все производители</a>
+      <a href="">Все производители</a>
       <ul>
         <li><a href=""><img src="img/bosch.jpg" width="126" height="37" alt="Bosch"></a></li>
         <li><a href=""><img src="img/makita.jpg" width="123" height="40" alt="Makita"></a></li>
@@ -223,23 +230,25 @@
       <ul>
         <li>
           <h3>Доставка</h3>
-          <div>
-            <span>Доставка</span>
+          <div class="visually-hidden">
+            <p>Доставка</p>
             <p>Мы с удовольствием доставим ваш товар прямо<br>к вашему подъезду совершенно бесплатно!<br>Ведь мы неплохо
               заработаем, поднимая его на ваш этаж!</p>
           </div>
         </li>
         <li>
           <h3>Гарантия</h3>
-          <div>
-            <span>Гарантия</span>
-            <p>Если купленный у нас товар поломается или заискрит,<br>а также в случае пожара, спровоцированный его возгоранием,<br>вы всегда можете быть уверены в нашей гарантии. Мы обменяем<br>сгоревший товар на новый.<br>Дом уж восстановите как-нибудь сами.</p>
+          <div class="visually-hidden">
+            <p>Гарантия</p>
+            <p>Если купленный у нас товар поломается или заискрит,<br>а также в случае пожара, спровоцированный его
+              возгоранием,<br>вы всегда можете быть уверены в нашей гарантии. Мы обменяем<br>сгоревший товар на
+              новый.<br>Дом уж восстановите как-нибудь сами.</p>
           </div>
         </li>
         <li>
           <h3>Кредит</h3>
           <div>
-            <span>Кредит</span>
+            <p>Кредит</p>
             <p>Залезть в долговую яму стало проще!<br>Кредитные консультанты придут вам на помощь.</p>
             <a href="">Отправить заявку</a>
           </div>
@@ -247,7 +256,7 @@
       </ul>
     </section>
     <section>
-      <h2>О компании</h2>
+      <h2 class="visually-hidden">О компании</h2>
       <p>Компания "Техномарт"</p>
       <p>Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и строительства не оставит
         равнодушными любителей сэкономить на гастарбайтерах.</p>
@@ -263,7 +272,8 @@
     <section>
       <h2>Контакты</h2>
       <p>Вы можете забрать товар сами,<br> заехав к нам в офис.</p>
-      <a href=""><img src="img/map.png" width="300" height="159" alt="Местоположение магазина"></a>
+      <a href=""><img src="img/map.png" width="300" height="159"
+          alt="Магазин расположен по адресу ул. Большая Конюшенная 19, Санкт-Петербург"></a>
       <button type="button">Заблудились? Напишите нам!</button>
     </section>
   </main>
@@ -288,9 +298,9 @@
     </ul>
     <p>&copy; 2010-2019 Компания "Техномарт"<br>Все права защищены</p>
     <ul>
-      <li><a href="#">ВКонтакте</a></li>
-      <li><a href="#">Фейсбук</a></li>
-      <li><a href="#">Инстаграм</a></li>
+      <li><a href="">ВКонтакте</a></li>
+      <li><a href="">Фейсбук</a></li>
+      <li><a href="">Инстаграм</a></li>
     </ul>
     <p>
       Обратная связь:
@@ -302,9 +312,14 @@
     </p>
   </footer>
 
-  <section>
-    <h2>Обратная связь</h2>
-    <!--Здесь булет форма-->
+  <section class="visually-hidden">
+    <h2 class="visually-hidden">Обратная связь</h2>
+    <form>
+      <label>Ваше Имя:<input type="text" placeholder="Имя и Фамилия" value=""></label>
+      <label>Ваш e-mail:<input type="email" placeholder="email@example.com" value=""></label>
+      <label>Текст письма:<textarea placeholder="В свободной форме" value=""></textarea></label>
+      <button type="submit">Отправить</button>
+    </form>
     <button type="button">Закрыть</button>
   </section>
 </body>
